--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,14 +13,14 @@
 
         <variable
             name="activity"
-            type="com.leebeebeom.closetnote.ui.main.MainActivity" />
+            type="com.leebeebeom.closetnote.ui.MainActivity" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:id="@+id/root"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.MainActivity">
+        tools:context=".ui.MainActivity">
 
         <include
             android:id="@+id/actionBar"
