--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -6,7 +6,7 @@
     <data>
 
         <variable
-            name="signInFragment"
+            name="fragment"
             type="com.leebeebeom.closetnote.ui.signin.SignInFragment" />
 
         <variable
@@ -58,7 +58,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="@dimen/_2sdp"
                     android:alpha="0.7"
-                    android:onClick="@{() -> signInFragment.navigateResetPasswordFragment()}"
+                    android:onClick="@{() -> fragment.navigateResetPasswordFragment()}"
                     android:text="@string/sign_up_find_password"
                     android:textSize="@dimen/_9sdp"
                     app:layout_constraintBottom_toTopOf="@id/btnSignIn"
@@ -70,7 +70,7 @@
                     android:layout_width="0dp"
                     android:layout_height="@dimen/_44sdp"
                     android:layout_marginTop="@dimen/_2sdp"
-                    android:onClick="@{() -> model.textsNotEmpty ? signInFragment.emailSignIn() : signInFragment.setEmptyError()}"
+                    android:onClick="@{() -> model.textsNotEmpty &amp;&amp; fragment.isConnect()  ? fragment.emailSignIn() : fragment.setEmptyError()}"
                     android:text="@string/sign_in"
                     android:textColor="?colorPrimary"
                     app:backgroundTint="?myColorControl"
@@ -92,7 +92,7 @@
                     android:id="@+id/signInButtons"
                     layout="@layout/fragment_sign_in_include_sign_in_buttons"
                     android:layout_width="0dp"
-                    app:fragment="@{signInFragment}"
+                    app:fragment="@{fragment}"
                     android:layout_height="wrap_content"
                     app:layout_constraintBottom_toTopOf="@id/or2"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -113,7 +113,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:alpha="0.7"
-                    android:onClick="@{() -> signInFragment.navigateSignUpFragment()}"
+                    android:onClick="@{() -> fragment.navigateSignUpFragment()}"
                     android:text="@string/sign_in_sign_up"
                     android:textSize="@dimen/_9sdp"
                     app:layout_constraintEnd_toStartOf="@id/tvSlash"
@@ -139,7 +139,7 @@
                     android:alpha="0.7"
                     android:text="@string/sign_in_anonymously"
                     android:textSize="@dimen/_9sdp"
-                    android:onClick="@{() -> signInFragment.signInAnonymously()}"
+                    android:onClick="@{() -> fragment.isConnect() ? fragment.signInAnonymously() : void}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@id/tvSlash"
                     app:layout_constraintTop_toBottomOf="@id/or2" />
