--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -14,137 +13,135 @@
             type="com.leebeebeom.closetnote.ui.signin.SignInViewModel" />
     </data>
 
-    <com.leebeebeom.closetnote.ui.view.LockableScrollView
-        android:id="@+id/sv"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".ui.signin.SignInFragment">
+        android:layout_height="match_parent">
 
-        <FrameLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingHorizontal="@dimen/_28sdp">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:layout_width="match_parent"
+            <com.leebeebeom.closetnote.ui.view.AppNameTextView
+                android:id="@+id/tvAppName"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:paddingHorizontal="@dimen/_28sdp">
+                android:textSize="@dimen/_48sdp"
+                app:layout_constraintBottom_toTopOf="@id/et"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-                <com.leebeebeom.closetnote.ui.view.AppNameTextView
-                    android:id="@+id/tvAppName"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="@dimen/_48sdp"
-                    app:layout_constraintBottom_toTopOf="@id/et"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
+            <include
+                android:id="@+id/et"
+                layout="@layout/fragment_sign_in_include_edit_text"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_20sdp"
+                app:emailLive="@{model.emailLive}"
+                app:layout_constraintBottom_toTopOf="@id/tvForgotPassword"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvAppName"
+                app:passwordLive="@{model.passwordLive}" />
 
-                <include
-                    android:id="@+id/et"
-                    layout="@layout/fragment_sign_in_include_edit_text"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_20sdp"
-                    app:emailLive="@{model.emailLive}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvAppName"
-                    app:passwordLive="@{model.passwordLive}" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvForgotPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:alpha="0.7"
+                android:onClick="@{() -> fragment.navigateResetPasswordFragment()}"
+                android:text="@string/sign_up_forgot_password"
+                android:textSize="@dimen/_9sdp"
+                app:layout_constraintBottom_toTopOf="@id/btnSignIn"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/et" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvFindPassword"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:alpha="0.7"
-                    android:onClick="@{() -> fragment.navigateResetPasswordFragment()}"
-                    android:text="@string/sign_up_find_password"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintBottom_toTopOf="@id/btnSignIn"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/et" />
+            <com.leebeebeom.closetnote.ui.view.CustomButton
+                android:id="@+id/btnSignIn"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                android:layout_width="0dp"
+                android:layout_height="@dimen/_44sdp"
+                android:layout_marginTop="@dimen/_2sdp"
+                android:onClick="@{() -> model.textsNotEmpty &amp;&amp; fragment.isConnect()  ? fragment.emailSignIn() : fragment.setEmptyError()}"
+                android:text="@string/sign_in"
+                android:textColor="?colorPrimary"
+                app:backgroundTint="?myColorControl"
+                app:layout_constraintBottom_toTopOf="@id/or1"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/tvForgotPassword"
+                app:strokeColor="@android:color/transparent" />
 
-                <com.leebeebeom.closetnote.ui.view.CustomButton
-                    android:id="@+id/btnSignIn"
-                    android:layout_width="0dp"
-                    android:layout_height="@dimen/_44sdp"
-                    android:layout_marginTop="@dimen/_2sdp"
-                    android:onClick="@{() -> model.textsNotEmpty &amp;&amp; fragment.isConnect()  ? fragment.emailSignIn() : fragment.setEmptyError()}"
-                    android:text="@string/sign_in"
-                    android:textColor="?colorPrimary"
-                    app:backgroundTint="?myColorControl"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/tvFindPassword" />
+            <include
+                android:id="@+id/or1"
+                layout="@layout/fragment_sign_in_include_or"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/signInButtons"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
 
-                <include
-                    android:id="@+id/or1"
-                    layout="@layout/fragment_sign_in_include_or"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@id/signInButtons"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/btnSignIn" />
+            <include
+                android:id="@+id/signInButtons"
+                layout="@layout/fragment_sign_in_include_sign_in_buttons"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:fragment="@{fragment}"
+                app:layout_constraintBottom_toTopOf="@id/or2"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/or1" />
 
-                <include
-                    android:id="@+id/signInButtons"
-                    layout="@layout/fragment_sign_in_include_sign_in_buttons"
-                    android:layout_width="0dp"
-                    app:fragment="@{fragment}"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintBottom_toTopOf="@id/or2"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/or1" />
+            <include
+                android:id="@+id/or2"
+                layout="@layout/fragment_sign_in_include_or"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                app:layout_constraintBottom_toTopOf="@id/tvSlash"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/signInButtons" />
 
-                <include
-                    android:id="@+id/or2"
-                    layout="@layout/fragment_sign_in_include_or"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/signInButtons" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvSignUp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:onClick="@{() -> fragment.navigateSignUpFragment()}"
+                android:text="@string/sign_in_sign_up_with_other_email"
+                android:textSize="@dimen/_9sdp"
+                app:layout_constraintEnd_toStartOf="@id/tvSlash"
+                app:layout_constraintHorizontal_chainStyle="packed"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/or2" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvSignUp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.7"
-                    android:onClick="@{() -> fragment.navigateSignUpFragment()}"
-                    android:text="@string/sign_in_sign_up"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintEnd_toStartOf="@id/tvSlash"
-                    app:layout_constraintHorizontal_chainStyle="packed"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/or2" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvSlash"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.5"
+                android:text="@string/sign_in_slash"
+                android:textSize="@dimen/_9sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/or2" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvSlash"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.5"
-                    android:text="@string/sign_in_slash"
-                    android:textSize="@dimen/_9sdp"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/or2" />
+            <com.google.android.material.textview.MaterialTextView
+                android:id="@+id/tvAnonymously"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:alpha="0.7"
+                android:onClick="@{() -> fragment.isConnect() ? fragment.signInAnonymously() : void}"
+                android:text="@string/sign_in_anonymously"
+                android:textSize="@dimen/_9sdp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@id/tvSlash"
+                app:layout_constraintTop_toBottomOf="@id/or2" />
 
-                <com.google.android.material.textview.MaterialTextView
-                    android:id="@+id/tvAnonymously"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:alpha="0.7"
-                    android:text="@string/sign_in_anonymously"
-                    android:textSize="@dimen/_9sdp"
-                    android:onClick="@{() -> fragment.isConnect() ? fragment.signInAnonymously() : void}"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/tvSlash"
-                    app:layout_constraintTop_toBottomOf="@id/or2" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-        </FrameLayout>
-    </com.leebeebeom.closetnote.ui.view.LockableScrollView>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </FrameLayout>
 </layout>
