레이아웃 정리

--- a/app/src/main/res/layout/fragment_send_reset_password_email.xml
+++ b/app/src/main/res/layout/fragment_send_reset_password_email.xml
@@ -28,11 +28,13 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <com.leebeebeom.closetnote.ui.view.CustomButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_36sdp"
                 android:onClick="@{() -> fragment.openMail()}"
                 android:text="@string/send_reset_password_email_lets_check"
                 android:textColor="?colorPrimary"
+                app:strokeColor="@android:color/transparent"
                 app:backgroundTint="?myColorControl"
                 app:layout_constraintEnd_toEndOf="@id/tvSendEmail"
                 app:layout_constraintTop_toBottomOf="@id/tvSendEmail" />
