스크롤뷰 삭제

--- a/app/src/main/res/layout/fragment_reset_password.xml
+++ b/app/src/main/res/layout/fragment_reset_password.xml
@@ -14,11 +14,6 @@
             type="com.leebeebeom.closetnote.ui.signin.resetpassword.ResetPasswordViewModel" />
     </data>
 
-    <com.leebeebeom.closetnote.ui.view.LockableScrollView
-        android:id="@+id/sv"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -70,6 +65,8 @@
             </com.leebeebeom.closetnote.ui.view.OutlinedTextInputLayout>
 
             <com.leebeebeom.closetnote.ui.view.CustomButton
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
+                app:strokeColor="@android:color/transparent"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/_36sdp"
                 android:layout_marginTop="@dimen/_2sdp"
@@ -81,5 +78,4 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/emailLayout" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </com.leebeebeom.closetnote.ui.view.LockableScrollView>
 </layout>
