--- a/app/src/main/res/layout/fragment_verification.xml
+++ b/app/src/main/res/layout/fragment_verification.xml
@@ -28,19 +28,20 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
 
-        <com.google.android.material.button.MaterialButton
+        <com.leebeebeom.closetnote.ui.view.CustomButton
             android:id="@+id/btnVerification"
+            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_4sdp"
             android:onClick="@{() -> fragment.openMail()}"
             android:text="@string/verification_verify"
             android:textColor="?colorPrimary"
-            android:textSize="@dimen/_12sdp"
             app:backgroundTint="?myColorControl"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/tvSendVerificationEmail" />
+            app:layout_constraintTop_toBottomOf="@id/tvSendVerificationEmail"
+            app:strokeColor="@android:color/transparent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
