--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -8,7 +8,7 @@
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/white</item>
         <item name="colorSecondaryVariant">@color/white</item>
-        <item name="colorOnSecondary">@color/black</item>
+        <item name="colorOnSecondary">@color/white</item>
         <!-- From Material Design. -->
         <item name="colorSurface">#FF121212</item>
         <item name="colorOnBackground">#FFFFFF</item>
@@ -18,11 +18,11 @@
         <item name="android:colorControlActivated" tools:targetApi="l">@color/white</item>
 
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">#000000</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/black</item>
 
         <!-- Customize your theme here. -->
         <!--        phone navigation bar color-->
-        <item name="android:navigationBarColor" tools:targetApi="l">#000000</item>
+        <item name="android:navigationBarColor" tools:targetApi="l">@color/black</item>
         <!--        menu color-->
         <item name="android:textColorSecondary">@android:color/white</item>
         <!--        text color-->
@@ -33,10 +33,10 @@
         <item name="windowActionModeOverlay">true</item>
         <!--        font-->
         <item name="fontFamily">@font/noto</item>
-        <!--        recycler view background color-->
-        <item name="rvBackground">@color/rv_background_night</item>
-        <!--        input output go button color-->
-        <item name="goBtnBackground">@color/go_btn_background_night</item>
+        <!--        my background color-->
+        <item name="rvBackground">@color/myBackgroundColorNight</item>
+        <!--        go button color-->
+        <item name="goBtnBackground">@color/myGoButtonBackgroundColorNight</item>
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
         <!--        my color control-->
