--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,10 +37,10 @@
         <item name="windowActionModeOverlay">true</item>
         <!--        font-->
         <item name="fontFamily">@font/noto</item>
-        <!--        recycler view background color-->
-        <item name="rvBackground">@color/rv_background</item>
-        <!--        input output go button color-->
-        <item name="goBtnBackground">@color/go_btn_background</item>
+        <!--        my background color-->
+        <item name="rvBackground">@color/myBackgroundColor</item>
+        <!--        go button color-->
+        <item name="goBtnBackground">@color/myGoButtonBackgroundColor</item>
         <!--        ripple color remove-->
         <item name="colorControlHighlight">@android:color/transparent</item>
         <!--        my color control-->
@@ -77,37 +77,46 @@
         <item name="textColorAlertDialogListItem">@color/black</item>
         <item name="android:textSize">@dimen/_12sdp</item>
     </style>
-    <!--    edit text focused outline-->
-    <style name="myOutlineEditText" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
+    <!--    edit text style-->
+    <style name="myOutlineEditTextLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox">
         <item name="boxStrokeColor">@color/outlined_edit_text</item>
+        <item name="hintTextAppearance">@style/myTextSize10sdp</item>
+        <item name="hintTextColor">?myColorControl</item>
+        <item name="errorTextAppearance">@style/myTextSize9sdp</item>
+        <item name="placeholderTextAppearance">@style/myTextSize11sdp</item>
+        <item name="shapeAppearance">@style/myEditTextCorner</item>
+        <item name="suffixTextAppearance">@style/myTextSize10sdp</item>
     </style>
-    <!--    edit text focused outline-->
-    <style name="myAutoCompleteTextView" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
+    <!--    autocomplete textview layout-->
+    <style name="myAutoCompleteTextViewLayout" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
         <item name="boxStrokeColor">@color/outlined_edit_text</item>
+        <item name="hintTextAppearance">@style/myTextSize10sdp</item>
+        <item name="hintTextColor">?myColorControl</item>
+        <item name="errorTextAppearance">@style/myTextSize9sdp</item>
+        <item name="placeholderTextAppearance">@style/myTextSize11sdp</item>
+        <item name="shapeAppearance">@style/myEditTextCorner</item>
+        <item name="suffixTextAppearance">@style/myTextSize10sdp</item>
     </style>
     <!--    action bar title style-->
     <style name="myActionBarTitleStyle">
-        <item name="android:textSize">@dimen/_12sdp</item>
-    </style>
-
-    <style name="myTextSize8sdp" parent="Widget.Design.TextInputLayout">
-        <item name="android:textSize">@dimen/_8sdp</item>
+        <item name="android:textSize">@dimen/_14sdp</item>
     </style>
 
     <style name="myTextSize9sdp" parent="Widget.Design.TextInputLayout">
         <item name="android:textSize">@dimen/_9sdp</item>
     </style>
 
-    <style name="myTextSize10sdp" parent="Widget.MaterialComponents.TextView">
+    <style name="myTextSize10sdp" parent="Widget.Design.TextInputLayout">
         <item name="android:textSize">@dimen/_10sdp</item>
     </style>
 
-    <style name="myTextSize11sdp" parent="Widget.MaterialComponents.TextView">
+    <style name="myTextSize11sdp" parent="Widget.Design.TextInputLayout">
         <item name="android:textSize">@dimen/_11sdp</item>
     </style>
 
-    <style name="mySignInButton" parent="Widget.MaterialComponents.Button.OutlinedButton">
-        <item name="fontFamily">@font/sc_dream5</item>
+    <style name="myPlaceHolderAppearance">
+        <item name="android:textSize">@dimen/_11sdp</item>
+        <item name="placeholderTextColor">@color/mtrl_indicator_text_color</item>
     </style>
 
     <attr name="rvBackground" format="color" />
@@ -115,5 +124,5 @@
     <attr name="myColorControl" format="color" />
     <attr name="treeBackgroundColor" format="color" />
     <attr name="myCardViewBackground" format="color" />
-    <attr name="myIndicatorColor" format="color"/>
+    <attr name="myIndicatorColor" format="color" />
 </resources>
